include/ltrapi.h


enum en_LTR_ERRORS {
    LTR_OK                            =  0,   
    LTR_ERROR_UNKNOWN                 = -1,   
    LTR_ERROR_PARAMETERS              = -2,   
    LTR_ERROR_PARAMETRS               = LTR_ERROR_PARAMETERS,
    LTR_ERROR_MEMORY_ALLOC            = -3,   
    LTR_ERROR_OPEN_CHANNEL            = -4,   
    LTR_ERROR_OPEN_SOCKET             = -5,   
    LTR_ERROR_CHANNEL_CLOSED          = -6,   
    LTR_ERROR_SEND                    = -7,   
    LTR_ERROR_RECV                    = -8,   
    LTR_ERROR_EXECUTE                 = -9,   
    LTR_WARNING_MODULE_IN_USE         = -10,  
    LTR_ERROR_NOT_CTRL_CHANNEL        = -11,  
    LTR_ERROR_SRV_INVALID_CMD         = -12,  
    LTR_ERROR_SRV_INVALID_CMD_PARAMS  = -13,  
    LTR_ERROR_INVALID_CRATE           = -14,  
    LTR_ERROR_EMPTY_SLOT              = -15,  
    LTR_ERROR_UNSUP_CMD_FOR_SRV_CTL   = -16,  
    LTR_ERROR_INVALID_IP_ENTRY        = -17,  
    LTR_ERROR_NOT_IMPLEMENTED         = -18,  
    LTR_ERROR_CONNECTION_CLOSED       = -19,  
    LTR_ERROR_LTRD_UNKNOWN_RETCODE    = -20,  
    LTR_ERROR_LTRD_CMD_FAILED         = -21,  
    LTR_ERROR_INVALID_CON_SLOT_NUM    = -22,  
    LTR_ERROR_INVALID_MODULE_DESCR    = -40,  
    LTR_ERROR_INVALID_MODULE_SLOT     = -41,  
    LTR_ERROR_INVALID_MODULE_ID       = -42,  
    LTR_ERROR_NO_RESET_RESPONSE       = -43,  
    LTR_ERROR_SEND_INSUFFICIENT_DATA  = -44,  
    LTR_ERROR_RECV_INSUFFICIENT_DATA  = -45,  
    LTR_ERROR_NO_CMD_RESPONSE         = -46,  
    LTR_ERROR_INVALID_CMD_RESPONSE    = -47,  
    LTR_ERROR_INVALID_RESP_PARITY     = -48,  
    LTR_ERROR_INVALID_CMD_PARITY      = -49,  
    LTR_ERROR_UNSUP_BY_FIRM_VER       = -50,  
    LTR_ERROR_MODULE_STARTED          = -51,  
    LTR_ERROR_MODULE_STOPPED          = -52,  
    LTR_ERROR_RECV_OVERFLOW           = -53,  
    LTR_ERROR_FIRM_FILE_OPEN          = -54,  
    LTR_ERROR_FIRM_FILE_READ          = -55,  
    LTR_ERROR_FIRM_FILE_FORMAT        = -56,  
    LTR_ERROR_FPGA_LOAD_READY_TOUT    = -57,  
    LTR_ERROR_FPGA_LOAD_DONE_TOUT     = -58,  
    LTR_ERROR_FPGA_IS_NOT_LOADED      = -59,  
    LTR_ERROR_FLASH_INVALID_ADDR      = -60,  
    LTR_ERROR_FLASH_WAIT_RDY_TOUT     = -61,  
    LTR_ERROR_FIRSTFRAME_NOTFOUND     = -62,  
    LTR_ERROR_CARDSCONFIG_UNSUPPORTED = -63,  
    LTR_ERROR_FLASH_OP_FAILED         = -64,  
    LTR_ERROR_FLASH_NOT_PRESENT       = -65,  
    LTR_ERROR_FLASH_UNSUPPORTED_ID    = -66,  
    LTR_ERROR_FLASH_UNALIGNED_ADDR    = -67,  
    LTR_ERROR_FLASH_VERIFY            = -68,  
    LTR_ERROR_FLASH_UNSUP_PAGE_SIZE   = -69,  
    LTR_ERROR_FLASH_INFO_NOT_PRESENT  = -70,  
    LTR_ERROR_FLASH_INFO_UNSUP_FORMAT = -71,  
    LTR_ERROR_FLASH_SET_PROTECTION    = -72,  
    LTR_ERROR_FPGA_NO_POWER           = -73,  
    LTR_ERROR_FPGA_INVALID_STATE      = -74,  
    LTR_ERROR_FPGA_ENABLE             = -75,  
    LTR_ERROR_FPGA_AUTOLOAD_TOUT      = -76,  
    LTR_ERROR_PROCDATA_UNALIGNED      = -77,  
    LTR_ERROR_PROCDATA_CNTR           = -78,  
    LTR_ERROR_PROCDATA_CHNUM          = -79,  
    LTR_ERROR_PROCDATA_WORD_SEQ       = -80,  
    LTR_ERROR_FLASH_INFO_CRC          = -81,  
    LTR_ERROR_PROCDATA_UNEXP_CMD      = -82,  
    LTR_ERROR_UNSUP_BY_BOARD_REV      = -83,  
    LTR_ERROR_MODULE_NOT_CONFIGURED   = -84,  
    LTR_ERROR_FLASH_INFO_DEVTYPE      = -85,  
    LTR_ERROR_OP_DONE_WAIT_TOUT       = -86,  
    LTR_ERROR_UNSUP_BY_MODIFICATION   = -87,  
    LTR_ERROR_UNEXP_DATA_AFTER_ACK    = -88,  
    LTR_ERROR_UNKNOWN_MODULE_ID       = -89,  
};
enum en_LTR_UserIoCfg {
    LTR_USERIO_DIGIN1   = 1,    
    LTR_USERIO_DIGIN2   = 2,    
    LTR_USERIO_DIGOUT   = 0,    
    LTR_USERIO_DEFAULT  = LTR_USERIO_DIGOUT 
};
enum en_LTR_DigOutCfg {
    LTR_DIGOUT_CONST0   = 0, 
    LTR_DIGOUT_CONST1   = 1, 
    LTR_DIGOUT_USERIO0  = 2, 
    LTR_DIGOUT_USERIO1  = 3, 
    LTR_DIGOUT_DIGIN1   = 4, 
    LTR_DIGOUT_DIGIN2   = 5, 
    LTR_DIGOUT_START    = 6, 
    LTR_DIGOUT_SECOND   = 7, 
    LTR_DIGOUT_IRIG     = 8, 
    LTR_DIGOUT_DEFAULT  = LTR_DIGOUT_CONST0 
};
enum en_LTR_MarkMode {
    LTR_MARK_OFF                = 0, 
    LTR_MARK_EXT_DIGIN1_RISE    = 1, 
    LTR_MARK_EXT_DIGIN1_FALL    = 2, 
    LTR_MARK_EXT_DIGIN2_RISE    = 3, 
    LTR_MARK_EXT_DIGIN2_FALL    = 4, 
    LTR_MARK_INTERNAL           = 5,
    LTR_MARK_NAMUR1_LO2HI       = 8,    
    LTR_MARK_NAMUR1_HI2LO       = 9,    
    LTR_MARK_NAMUR2_LO2HI       = 10,   
    LTR_MARK_NAMUR2_HI2LO       = 11,   
    LTR_MARK_SEC_IRIGB_DIGIN1   = 16,   
    LTR_MARK_SEC_IRIGB_nDIGIN1  = 17,   
    LTR_MARK_SEC_IRIGB_DIGIN2   = 18,   
    LTR_MARK_SEC_IRIGB_nDIGIN2  = 19,   
};
typedef struct {
    DWORD saddr;
    WORD  sport;
    CHAR  csn[LTR_CRATE_SERIAL_SIZE];
    WORD  cc;
    DWORD flags;
    DWORD tmark;
    LPVOID Internal;
} TLTR;
typedef struct {
    WORD        userio[4];
    WORD        digout[2];
    WORD        digout_en;
} TLTR_CONFIG;
LTRAPIWIN_DllExport(INT) LTR_Init(TLTR *hnd);
LTRAPIWIN_DllExport(INT) LTR_Open(TLTR *hnd);
LTRAPIWIN_DllExport(INT) LTR_Close(TLTR *hnd);
LTRAPIWIN_DllExport(INT) LTR_IsOpened(TLTR *hnd);
LTRAPIWIN_DllExport(INT) LTR_GetServerVersion(TLTR *hsrv, DWORD *version);
LTRAPIWIN_DllExport(INT) LTR_GetCrates(TLTR *hsrv, BYTE *csn);
LTRAPIWIN_DllExport(INT) LTR_GetCrateModules(TLTR *hcrate, WORD *mid);
LTRAPIWIN_DllExport(INT) LTR_GetCrateInfo(TLTR *hcrate, TLTR_CRATE_INFO *CrateInfo);
LTRAPIWIN_DllExport(INT) LTR_Config(TLTR *hcrate, const TLTR_CONFIG *conf);
LTRAPIWIN_DllExport(INT) LTR_MakeStartMark(TLTR *hcrate, INT mode);
LTRAPIWIN_DllExport(INT) LTR_StartSecondMark(TLTR *hcrate, INT mode);
LTRAPIWIN_DllExport(INT) LTR_StopSecondMark(TLTR *hcrate);
LTRAPIWIN_DllExport(INT) LTR_GetCrateRawData(TLTR *hcrate, DWORD *data, DWORD *tmark,
                                             DWORD size, DWORD timeout);
LTRAPIWIN_DllExport(INT) LTR_SetLogLevel(TLTR *hsrv, INT level, BOOL permanent);
LTRAPIWIN_DllExport(INT) LTR_GetLogLevel(TLTR *hsrv, INT *level);
LTRAPIWIN_DllExport(INT) LTR_ServerRestart(TLTR *hsrv);
LTRAPIWIN_DllExport(INT) LTR_ServerShutdown(TLTR *hsrv);
LTRAPIWIN_DllExport(INT) LTR_GetListOfIPCrates(TLTR *hsrv, DWORD max_entries, DWORD ip_net,
    DWORD ip_mask, DWORD *entries_found, DWORD *entries_returned, TLTR_CRATE_IP_ENTRY *info_array);
LTRAPIWIN_DllExport(INT) LTR_AddIPCrate(TLTR *hsrv, DWORD ip_addr, DWORD flags, BOOL permanent);
LTRAPIWIN_DllExport(INT) LTR_DeleteIPCrate(TLTR *hsrv, DWORD ip_addr, BOOL permanent);
LTRAPIWIN_DllExport(INT) LTR_ConnectIPCrate(TLTR *hsrv, DWORD ip_addr);
LTRAPIWIN_DllExport(INT) LTR_DisconnectIPCrate(TLTR *hsrv, DWORD ip_addr);
LTRAPIWIN_DllExport(INT) LTR_ConnectAllAutoIPCrates(TLTR *hsrv);
LTRAPIWIN_DllExport(INT) LTR_DisconnectAllIPCrates(TLTR *hsrv);
LTRAPIWIN_DllExport(INT) LTR_SetIPCrateFlags(TLTR *hsrv, DWORD ip_addr, DWORD flags,
                                             BOOL permanent);
LTRAPIWIN_DllExport(INT) LTR_Recv(TLTR *hmodule, DWORD *data, DWORD *tmark, DWORD size, DWORD timeout);
LTRAPIWIN_DllExport(INT) LTR_Send(TLTR *hmodule, const DWORD *data, DWORD size, DWORD timeout);
LTRAPIWIN_DllExport(LPCSTR) LTR_GetErrorString(INT err);
LTRAPIWIN_DllExport(INT) LTR_SetTimeout(TLTR *hnd, DWORD tout);
LTRAPIWIN_DllExport(INT) LTR_SetServerProcessPriority(TLTR *ltr, DWORD Priority);
LTRAPIWIN_DllExport(INT) LTR_GetServerProcessPriority(TLTR *ltr, DWORD *Priority);
LTRAPIWIN_DllExport(INT) LTR_GetIPCrateDiscoveryMode(TLTR *ltr, BOOL *enabled, BOOL *autoconnect);
LTRAPIWIN_DllExport(INT) LTR_SetIPCrateDiscoveryMode(TLTR *ltr, BOOL enabled, BOOL autoconnect,
    BOOL permanent);
LTRAPIWIN_DllExport(INT) LTR__GenericCtlFunc(TLTR *ltr, LPCVOID request_buf, DWORD request_size,
    LPVOID reply_buf, DWORD reply_size, INT ack_error_code, DWORD timeout);